# trend-box

./: .gitignore  README.md  arxiv_scraper.py  crawler.py  data-engineer-rss-scrapper.py  data_engineer_news_data_processor.py  embedder.py  generate_linkedin_card.py  generate_report_html.py  news_data_processor.py  newsletter_sender.py  pyproject.toml  requirements.txt  rss-scrapper.py  run_weekly.sh  scorer.py  site_scraper.py  workflow.yml
.github/workflows/: scrapper.yml
